# vector-equities

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  pyproject.toml  vercel.json
assets/: eval_sector_coherence.json  feature_manifest_v6_real.json  forward_calibration_isotonic.json  manifest.json  manifest_v6_real.json  real_data.json  real_data_flat.json  real_data_latest.json  real_pca.json  real_pca_full.json  trades_final_ranked_v6.csv  universe_full_history.json
docs/: ARCHITECTURE.md  DEF14A_FORM4_CHRONOGRAPH_SPEC.md  DETAILED_PLAN.md  HANDOFF.md  PLAN.md  REAL_PROD_REPORT.md  TOWER_V6_DESIGN.md
pipeline/: build_archetypes.py  build_demo.py  build_demo_v2.py  build_demo_v3.py  build_exec_registry_v3.py  build_real.py  build_real_from_summary.py  build_real_v2.py  build_real_v4_exec.py  build_real_v5_career.py  build_real_v6_towers.py  build_real_v6_towers_real.py  build_skills.py  composite_score.py  dataset_career.py  dataset_career_v6.py  eval_sector_coherence.py  eval_v6_real.py  expand_sp500.py  export_v6_real_assets.py  feature_spec.py  fetch_def14a.py  fetch_def14a_full.py  fetch_form4_summary.py  fetch_market.py  fetch_market_history.py  fetch_sec.py  fetch_sec_summary.py  fetch_submissions.py  fetch_submissions_extended.py  fetch_submissions_robust.py  ingest_sec_v2.py  model.py  model_career.py  mtnn_validation.py  parse_def14a.py  parse_def14a_v2.py  parse_def14a_v3.py  parse_def14a_v3_chunked.py  parse_def14a_v3_parallel.py  (+13 more)
pipeline/data/: embedding.npz  feature_manifest.json  fetch_full_expansion_progress.json  full_history_manifest.json  mtnn_report.json  sec_v2_manifest.json  train_matrix.npz  train_matrix_real.npz  universe.json
pipeline/data/chunks_v2/: index.json
pipeline/towers_v6/: __init__.py  fetch_external.py  industry_gdelt.py  political.py  trade_commodities.py
tests/: test_eval_sector_coherence.py
