[project]
name = "vector-equities"
version = "0.6.0"
description = "MTNN equities forecaster – 2741x154 train_matrix_v6, IC 0.549, 20 towers, real_data.json 4.83MB, free-tier Vercel cockpit"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name="Cam"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "torch>=2.0",
  "pyarrow",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.2",
  "pre-commit>=3.5",
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
  "assets/*",
  "data/*",
  "__pycache__",
  ".venv",
  "node_modules",
  "dist",
  ".git",
  "pipeline/cache",
  "pipeline/__pycache__",
]
# Ruff-inspired: one binary replaces black/flake8/isort

[tool.ruff.lint]
select = ["E","W","F","I","B","C4","UP","N","S","PTH","TCH","RUF"]
ignore = [
  "S101",  # assert allowed in tests/research
  "S603",  # subprocess – internal pipelines
  "S607",  # start process with partial path
  "S110",  # try-except-pass handled via bare-except audit
  "N803",  # argument name lower-case override for data scripts
]
fixable = ["ALL"]
unfixable = []
# Keep safety high but allow research speed

[tool.ruff.lint.per-file-ignores]
"pipeline/towers_v6/*" = ["S","N803","TCH"]
"pipeline/build_*.py" = ["TCH003","TCH002","E402"]  # late imports for CLI
"pipeline/*_v*.py" = ["E402","TCH"]
"assets/*" = ["ALL"]  # generated / preproc, not linted strictly
"scripts/*" = ["S"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["pipeline","towers_v6"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests","pipeline"]
python_files = ["test_*.py","*_test.py"]
addopts = "-q"

